syntax = "proto3";
package dbproto;
import "gift_package.proto";
import "gift_template.proto";

message CdKeyBatchArg {
    int64 id = 1;
    int64 add_time = 2;
    int64 max_exchange = 3;
    string title = 4;
    int64 gift_template_id = 5;
    int64 valid_start = 6;
    int64 valid_end = 7;
    string cdkey_desc = 8;
}

message GiftCdkeyArg {
    GiftPackageArg gift = 1;
    CdKeyBatchArg cdkey = 2;
}

message CdkeyListArg {
    string name = 1;
    int64 page = 2;
    int64 size = 3;
}

message CdkeyListReply {
    int64 id = 1;
    string title = 2;
    string content_desc = 3;
    string valid_start = 4;
    string valid_end = 5;
}

message CdkeyListArgReply {
    int64 total = 1;
    repeated CdkeyListReply cdkey_list= 2;
}

message CdkeyBatch {
    int64 id = 1;
    int64 max_exchange = 2;         //最大兑换数.
    string title = 3;               //标题.
    int64 gift_template_id = 4;      //礼包id.
    int64 valid_start = 5;          //开始时间.
    int64 valid_end = 6;            //结束时间.
    int64 add_time = 7;             //添加时间.
    string cdkey_desc = 8;          //描述.
}

message CdkeyReply {
    int64 page = 1;
    int64 size = 2;
    int64 total = 3;
    string title = 4;
    repeated CdkeyBatch list = 5;
}

message CdkeyDetail {
    int64 id = 1;               //cdkey id.
    int64 max_exchange = 2;     //最大兑换数.
    string title = 3;           //活动标题.
    int64 gift_template_id = 4;  //礼包id.
    int64 valid_start = 5;      //开始时间.
    int64 valid_end = 6;        //结束时间.
    int64 add_time  = 7;        //添加时间.
    GiftTemplateContent gift = 8; //礼包的具体内容.
    string content = 9;         //礼包的json.
    string cdkey_desc = 10;     //描述.
}